Redesign signin page, add connect functionality to website, cookies for uuid, web structure

--- a/client/frontend/src/App.css
+++ b/client/frontend/src/App.css
@@ -92,6 +92,11 @@ body,
   color: #2c9adf;
 }
 
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
 .input-container {
   position: relative;
   margin-bottom: 25px;
